# vacancy-collector

./: Dockerfile  LICENSE  README.md  alembic.ini  conftest.py  docker-compose-app.yml  docker-compose-tests.yml  docker-compose.yml  main.py  prestart.py  pyproject.toml  pytest.ini
.github/workflows/: dev_branch.yml
alembic/: env.py
alembic/versions/: 2025_03_06_0043-9300e5d7cf45_initial_migration.py  2025_03_15_2320-891b249c70ee_initial_migration.py
app/api/: template_router.py
app/api/v1/: api.py
app/api/v1/endpoints/: auth.py  channel.py  user.py  vacancy.py
app/core/: config.py  exceptions.py  logging.py  security.py  utils.py
app/crud/: base.py  channel.py  user.py  vacancy.py
app/db/: __init__.py  base_model.py  connect.py  mixins.py  models.py
app/routes/: template_router.py
app/schemas/: channel.py  response.py  token.py  user.py  vacancy.py
app/services/: channel.py  telegram.py  vacancy.py
app/templates/: base.html  dashboard.html
app/templates/auth/: login.html  register.html
app/templates/errors/: 404.html  500.html
app/templates/main/channels/: detail.html  list.html
app/templates/main/vacancies/: detail.html  list.html
app/tests/: conftest.py  fixtures.py  test_api_auth.py  test_api_user.py  utils.py
app/tests/integration/api/: test_api_auth.py  test_api_channel.py  test_api_user.py  test_api_vacancy.py
