[project]
name = "telegram-vacancy-collector"
description = "A service to collect messages (vacancies) from Telegram channels."
authors = [ { name = "Aleksandr Tarletskiy", email = "aleksandr.tarletsky@gmail.com" } ]
license = "MIT"
readme = "README.md"
dynamic = [ "version" ]
requires-python = ">=3.13.0"
dependencies = [
    "fastapi>=0.110.0,<0.111.0",
    "uvicorn[standard]>=0.29.0,<0.30.0",
    "telethon>=1.33.0,<2.0.0",
    "sqlalchemy>=2.0.29,<3.0.0",
    "asyncpg>=0.30.0,<0.31.0",
    "psycopg>=3.2.4,<4.0.0",
    "psycopg-binary>=3.2.4,<4.0.0",
    "alembic>=1.13.1,<2.0.0",
    "python-dotenv>=1.0.1,<2.0.0",
    "pydantic[email]>=2.6.4,<3.0.0",
    "pydantic-settings>=2.7.1,<3.0.0",
    "jinja2>=3.1.6,<4.0.0",
    "passlib[bcrypt]>=1.7.4,<2.0.0",
    "bcrypt>=4.1.2,<5.0.0",
    "aiohttp>=3.9.3,<4.0.0",
    "mypy>=1.15.0,<2.0.0",
    "jose>=1.0.0,<2.0.0",
    "tenacity>=9.0.0,<10.0.0"
]

[tool.poetry]
version = "0.1.0"
package-mode = false

[tool.poetry.dependencies]
python = ">=3.13.0,<4.0.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.0.0"
pytest-asyncio = "^0.23.5"
httpx = "^0.28.1"
ruff = "^0.9.9"
black = "^25.1.0"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
# Exclude a variety of commonly ignored directories.
exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".git-rewrite",
    ".hg",
    ".ipynb_checkpoints",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".pyenv",
    ".pytest_cache",
    ".pytype",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    ".vscode",
    ".python-version",
    "__pycache__",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "site-packages",
    "venv",
    "__init__.py",
]

# Same as Black.
line-length = 100
indent-width = 4

output-format = "grouped"

# Assume Python 3.13
target-version = "py313"

[tool.ruff.lint]
# Enable Pyflakes (`F`) and a subset of the pycodestyle (`E`)  codes by default.
# Unlike Flake8, Ruff doesn't enable pycodestyle warnings (`W`) or
# McCabe complexity (`C901`) by default.
select = ["E4", "E7", "E9", "F"]
ignore = []

# Allow fix for all enabled rules (when `--fix`) is provided.
fixable = ["ALL"]
unfixable = []

# Allow unused variables when underscore-prefixed.
dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"

[tool.ruff.lint.pylint]
allow-dunder-method-names = ["__tablename__", "__table_args__"]

[tool.ruff.lint.isort]
# Use a single line between direct and from import.
lines-between-types = 1
no-sections = false
order-by-type = true

[tool.ruff.format]
# Like Black, use double quotes for strings.
quote-style = "double"

# Like Black, indent with spaces, rather than tabs.
indent-style = "space"

# Like Black, respect magic trailing commas.
skip-magic-trailing-comma = false

# Like Black, automatically detect the appropriate line ending.
line-ending = "auto"

# Enable auto-formatting of code examples in docstrings. Markdown,
# reStructuredText code/literal blocks and doctests are all supported.
#
# This is currently disabled by default, but it is planned for this
# to be opt-out in the future.
docstring-code-format = false

# Set the line length limit used when formatting code snippets in
# docstrings.
#
# This only has an effect when the `docstring-code-format` setting is
# enabled.
docstring-code-line-length = "dynamic"
